--- a/src/main/resources/templates/loginForm.html
+++ b/src/main/resources/templates/loginForm.html
@@ -13,7 +13,7 @@
 	<input type="password" name="password" />
 	<button>로그인</button>
 </form>
-
+<a href="/oauth2/authorization/google" >구글로그인</a>
 <a href ="/joinForm">회원가입으로 이동</a>
 </body>
 </html>
